--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,80 @@
-/* You can add global styles to this file, and also import other style files */
+
+*,
+html,
+body {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  box-sizing: border-box;
+  background-color: #222;
+  background: radial-gradient(circle, #2a065b, #1f0625, #000000);
+  transition: background-image 0.5s ease-in-out,
+  background-color 0.5s ease-in-out;
+  overflow-x: hidden;
+  width:100%;
+}
+
+body,
+table,
+td {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  color: #ddd;
+}
+
+h2 {
+  font-weight: normal;
+}
+
+.container {
+  width: 100%;
+  z-index: 100;
+  padding: 2rem;
+  max-width: 1200px;
+  margin: auto;
+  align-items: center;
+  text-align: center;
+
+}
+
+.full-page {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  box-sizing: border-box;
+  z-index: 100;
+}
+
+.full-page-padding {
+  padding: 4rem 2rem;
+}
+
+.center-items {
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-panel {
+  z-index: 100;
+  box-sizing: border-box;
+  padding:1rem;
+
+  .logo {
+    margin-bottom: 2rem;
+    max-width:100%;
+  }
+
+  .slogan {
+    font-size: 150%;
+    margin-bottom: 2rem;
+    line-height: 150%;
+  }
+}
+@media only screen and (min-width: 600px) {
+
+
+}
